# nexus

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  coverage-baseline.json  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/eval/: baseline.json  consolidation_eval.json  episode_eval.json  fixture_bge_m3.json  golden.json  tag_golden.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent_backend.rs  chat_log.rs  crash.rs  error.rs  lib.rs  live_smoke.rs  main.rs  redact.rs  state.rs  tags.rs
apps/desktop/src-tauri/src/ai/: chat.rs  config.rs  embedder.rs  mod.rs
apps/desktop/src-tauri/src/board/: config.rs  mod.rs
apps/desktop/src-tauri/src/chunker/: mod.rs
apps/desktop/src-tauri/src/commands/: agent.rs  attachments.rs  backup.rs  board.rs  chat.rs  chat_sessions.rs  contradictions.rs  debug.rs  digest.rs  egress.rs  episode.rs  external.rs  git.rs  goals.rs  graph.rs  home.rs  inline.rs  memory.rs  mod.rs  news.rs  note_summary.rs  plugin.rs  properties.rs  scheduler.rs  search.rs  settings.rs  suggest.rs  tasks.rs  vault.rs  websearch.rs
apps/desktop/src-tauri/src/contradictions/: mod.rs
apps/desktop/src-tauri/src/db/: error.rs  migrations.rs  mod.rs  read_pool.rs  write_actor.rs
apps/desktop/src-tauri/src/digest/: mod.rs
apps/desktop/src-tauri/src/episode/: mod.rs
apps/desktop/src-tauri/src/eval/: classify.rs  consolidation.rs  live_tests.rs  mod.rs
apps/desktop/src-tauri/src/git/: creds.rs  mod.rs
apps/desktop/src-tauri/src/goals/: mod.rs
apps/desktop/src-tauri/src/graph/: mod.rs
apps/desktop/src-tauri/src/home/: activity.rs  insights.rs  mod.rs  stale.rs  widgets.rs
apps/desktop/src-tauri/src/indexer/: events.rs  links.rs  mod.rs  rag.rs  tests.rs
apps/desktop/src-tauri/src/memory/: consolidate.rs  extract.rs  mod.rs  tests.rs
apps/desktop/src-tauri/src/net/: mod.rs  persist.rs  resolve.rs
apps/desktop/src-tauri/src/news/: article.rs  config.rs  fetch.rs  llm.rs  mod.rs  parse.rs  run.rs  store.rs
apps/desktop/src-tauri/src/parser/: mod.rs
apps/desktop/src-tauri/src/plugin/: broker.rs  mod.rs  permission.rs
apps/desktop/src-tauri/src/properties/: mod.rs
apps/desktop/src-tauri/src/relation_reasons/: mod.rs
apps/desktop/src-tauri/src/scheduler/: mod.rs
apps/desktop/src-tauri/src/search/: mod.rs  rerank.rs
apps/desktop/src-tauri/src/starting_questions/: mod.rs
apps/desktop/src-tauri/src/suggest/: mod.rs
apps/desktop/src-tauri/src/tagger/: mod.rs
apps/desktop/src-tauri/src/vault/: history.rs  mod.rs
apps/desktop/src-tauri/src/vector/: mod.rs
apps/desktop/src-tauri/src/watcher/: mod.rs
apps/desktop/src-tauri/src/websearch/: agent.rs  config.rs  mod.rs  search.rs
apps/desktop/src-tauri/tests/: git_sync.rs
crates/nexus-agentd/: Cargo.toml
crates/nexus-agentd/src/: connect.rs  health.rs  main.rs  rag.rs  sandbox.rs  smoke.rs  startup.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: acp.rs  agent.rs  main.rs  service.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/eval/: baseline.json  tag_golden.json
crates/nexus-core/examples/: mock_acp_agent.rs
crates/nexus-core/src/: chat_log.rs  event.rs  lib.rs  scheduler.rs  tags.rs  tool_types.rs  util.rs
crates/nexus-core/src/actuator/: action.rs  apply.rs  audit.rs  classify.rs  decision.rs  mod.rs  orchestrate.rs  tools.rs  undo.rs
crates/nexus-core/src/actuator/apply/: tests.rs
crates/nexus-core/src/actuator/orchestrate/: events.rs  propose.rs  tests.rs  token_bucket.rs
crates/nexus-core/src/agent/: control.rs  event.rs  finish.rs  job.rs  memory.rs  mod.rs  registry.rs  run_store.rs  runner.rs  session.rs  skill_tools.rs  stubs.rs  test_support.rs  tool.rs  web_tools.rs
crates/nexus-core/src/agent/connect/: afunix.rs  client.rs  framing.rs  handler.rs  mod.rs  stdio.rs  wire.rs
crates/nexus-core/src/agent/delegate/: budget.rs  child_task.rs  mod.rs  registry.rs  spawn.rs  tool.rs
crates/nexus-core/src/agent/job/: tests.rs
crates/nexus-core/src/agent/research/: job.rs  mod.rs  orchestrate.rs  plan.rs  prompts.rs  quality.rs  query.rs  stop.rs  tool.rs  worker.rs  write.rs
crates/nexus-core/src/agent/session/: features.rs  tests.rs
crates/nexus-core/src/ai/: chat.rs  config.rs  embedder.rs  mod.rs  provider.rs  tokenizer.rs  tools.rs
crates/nexus-core/src/ai/assets/: qwen3_tokenizer.NOTICE.txt
crates/nexus-core/src/backup/: mod.rs
crates/nexus-core/src/bootstrap/: mod.rs
crates/nexus-core/src/chunker/: mod.rs
crates/nexus-core/src/contradictions/: mod.rs
crates/nexus-core/src/db/: migrations.rs  mod.rs  read_pool.rs  settings.rs  write_actor.rs
crates/nexus-core/src/db/migrations/: 002_chunks_fts.sql  006_contradictions.sql  007_contradiction_cache.sql  008_home_widgets.sql  010_news.sql  011_news_bodies.sql  012_chat_sessions.sql  020_egress_audit.sql  (+10 more)
crates/nexus-core/src/episode/: mod.rs
crates/nexus-core/src/eval/: episodes.rs  live_tests.rs
crates/nexus-core/src/graph/: mod.rs
crates/nexus-core/src/indexer/: events.rs  fs.rs  links.rs  mod.rs  rag.rs  tests.rs
crates/nexus-core/src/memory/: consolidate.rs  mod.rs  tests.rs
crates/nexus-core/src/net/: mod.rs  tests.rs
crates/nexus-core/src/plugin/: broker.rs  manage.rs  mod.rs  permission.rs
crates/nexus-core/src/rpc/: correlator.rs  framing.rs  mod.rs
crates/nexus-core/src/sandbox/: act.rs  child.rs  event.rs  exec_child.rs  exec_host.rs  exec_it.rs  exec_proxy.rs  exec_tools.rs  exec_undo.rs  mod.rs  provider.rs  proxy.rs  runner.rs
crates/nexus-core/src/search/: mod.rs  rerank.rs
crates/nexus-core/src/skills/: capability.rs  curator.rs  mod.rs  tests.rs  usage.rs
crates/nexus-core/src/suggest/: mod.rs
crates/nexus-core/src/vault/: history.rs  mod.rs
crates/nexus-core/src/vector/: mod.rs
crates/nexus-core/src/watcher/: mod.rs
crates/nexus-core/tests/: acp_e2e.rs  acp_server_e2e.rs
(+655 files in other folders)
