[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"

# Общие версии зависимостей монорепо (расширяется по мере появления крейтов/срезов).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
# БД-слой (ADR-003): rusqlite + bundled SQLite (компилируется внутрь — без системной зависимости,
# единый билд на Win/Mac/Linux, FTS5 включён в amalgamation для будущих срезов).
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
thiserror = "2"
# dev-only
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
