[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri", "crates/nexus-core"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"

# Общие версии зависимостей монорепо (расширяется по мере появления крейтов/срезов).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
# Файловый лог отладки (ротация по дням): отчёты владельца о «некликабельном» UI ловим журналом.
tracing-appender = "0.2"
dirs = "5"
# БД-слой (ADR-003): rusqlite + bundled SQLite (компилируется внутрь — без системной зависимости,
# единый билд на Win/Mac/Linux, FTS5 включён в amalgamation для будущих срезов).
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
thiserror = "2"
# Vault watcher / парсер / хэш (§3, §4.2)
notify-debouncer-full = "0.3"
pulldown-cmark = "0.12"
blake3 = "1"
# AI-слой (§4.3, ADR-005): HTTP к chat/embedding серверам. rustls — без системного OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
# Конкурентная обработка потоков (§10): buffer_unordered для перекрытия embed-вызовов при скане.
# Кооперативная конкуренция в одной задаче (не параллелизм) → синхронные секции usearch/БД без гонок.
futures = "0.3"
# Векторный ANN (§3): usearch HNSW, mmap, sibling-файл .nexus/vectors.usearch
usearch = "2"
# Криптослучайные capability-токены плагинов (§7.9, ADR-002)
getrandom = "0.2"
# Лента новостей (NF-1, docs/specs/news-feed.md): низкоуровневый XML-токенизатор для RSS/Atom
# (CDATA/энтити/неймспейсы руками ненадёжно); нормализация фидов — своя, мини-парсер-подход.
quick-xml = "0.37"
# dev-only
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
