[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri", "crates/nexus-core", "crates/nexus-agentd", "crates/nexus-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"

# Общие версии зависимостей монорепо (расширяется по мере появления крейтов/срезов).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
# Файловый лог отладки (ротация по дням): отчёты владельца о «некликабельном» UI ловим журналом.
tracing-appender = "0.2"
dirs = "5"
# БД-слой (ADR-003): rusqlite + bundled SQLite (компилируется внутрь — без системной зависимости,
# единый билд на Win/Mac/Linux, FTS5 включён в amalgamation для будущих срезов).
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
thiserror = "2"
# Vault watcher / парсер / хэш (§3, §4.2)
notify-debouncer-full = "0.3"
pulldown-cmark = "0.12"
blake3 = "1"
# SKILL-3 (вендоринг): SHA-256 для hash-pin сверки vendored SKILL.md против vendor.lock-манифеста.
# Манифест пинит upstream-хэши в SHA-256 (а не blake3) → нужен sha2. Уже транзитивно в Cargo.lock
# (sha2 0.10 через tauri-codegen), новой версии в дерево не приходит.
sha2 = "0.10"
# AI-слой (§4.3, ADR-005): HTTP к chat/embedding серверам. rustls — без системного OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
# Конкурентная обработка потоков (§10): buffer_unordered для перекрытия embed-вызовов при скане.
# Кооперативная конкуренция в одной задаче (не параллелизм) → синхронные секции usearch/БД без гонок.
futures = "0.3"
# Векторный ANN (§3): usearch HNSW, mmap, sibling-файл .nexus/vectors.usearch
usearch = "2"
# Криптослучайные capability-токены плагинов (§7.9, ADR-002)
getrandom = "0.2"
# Лента новостей (NF-1, docs/specs/news-feed.md): низкоуровневый XML-токенизатор для RSS/Atom
# (CDATA/энтити/неймспейсы руками ненадёжно); нормализация фидов — своя, мини-парсер-подход.
# 0.41: фикс RUSTSEC-2026-0194/0195 (O(N²)-атрибуты / неограниченная память xmlns — DoS).
# С 0.38 сущности внутри Text приходят отдельными Event::GeneralRef (см. news/parse.rs).
quick-xml = "0.41"
# Реальный BPE-токенайзер для оценки бюджета контекста LLM (P0-c): встроенный `tokenizer.json`
# задеплоенной модели (Qwen3.6-27B). default-features=false + onig — БЕЗ http/hf-hub/rustls: ни
# reqwest, ни hyper в дерево зависимостей не приходят (egress-chokepoint цел, AC-EGR-1; см.
# `cargo tree -p nexus-core -i reqwest`). onig = канонический HF-regex (C-сборка через cc; C-тулчейн
# уже нужен usearch/git2). Для чисто-Rust сборки можно заменить на features=["fancy-regex"] — счёт
# байт-идентичен на golden (проверено в P0-c-ревью), onig оставлен как референс HF-паритета.
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
# Распаковка встроенного gz-ассета токенайзера (qwen3_tokenizer.json.gz, 3.3 МБ) один раз при старте.
flate2 = "1"
# dev-only
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
