[package]
name = "nexus-core"
description = "Nexus — переиспользуемое ядро (БД, парсер, вектор, плагины, vault, чанкер, egress-граница, AI). Извлечено из nexus-desktop (CORE-1) для будущего headless agent-service."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Тест-хелперы ядра (MockEmbedder, GuardedClient::unchecked, live_test_embedder/LIVE_EMBED_DIM),
# которые до извлечения CORE-1 жили под `#[cfg(test)]` и шарились между тест-модулями ОДНОГО крейта.
# После разделения тесты потребителя (nexus-desktop) их не видят (`#[cfg(test)]` per-крейт + был
# `pub(crate)`). Фича `test-util` компилирует их как `pub` для dev-deps потребителя; в обычной
# (не-тестовой) сборке ядра она ВЫКЛЮЧЕНА — фикстуры не попадают в прод-бинарь.
[features]
test-util = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
# Ядро напрямую использует tokio::time (sleep/timeout в ai/chat), tokio::net (lookup_host в
# net/resolve) и tokio::fs (read/metadata в indexer — CORE-1c-1) — фичи добавляются к базовым из
# [workspace.dependencies] (rt-multi-thread/sync/macros). В app-сборке они и так включались
# транзитивно (reqwest/tauri), но standalone-крейт обязан объявить то, что использует напрямую.
# `process` — host `SandboxRunner` (sandbox/runner.rs) спавнит `podman run` (SANDBOX-4b-2b); `rt` — для
# tokio::spawn serve-тасков сокетов внутри раннера (вне #[tokio::main]-контекста бинаря).
tokio = { workspace = true, features = ["time", "net", "fs", "process", "rt"] }
thiserror = { workspace = true }
pulldown-cmark = { workspace = true }
blake3 = { workspace = true }
# SKILL-3 (вендоринг): SHA-256 hash-pin сверки vendored SKILL.md против vendor.lock-манифеста
# (манифест пинит upstream-файлы в SHA-256). Уже транзитивно в Cargo.lock (через tauri-codegen).
sha2 = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
usearch = { workspace = true }
getrandom = { workspace = true }
# CORE-1c-1: watcher-петля индексатора (debounce fs-событий vault).
notify-debouncer-full = { workspace = true }
# CORE-1c-1: параллельный эмбеддинг чанков в индексаторе (futures::stream::buffered).
futures = { workspace = true }
# P0-c: реальный BPE-токенайзер задеплоенной модели (ai/tokenizer.rs) для оценки бюджета контекста.
# default-features=false + onig — http/hf-hub/rustls ВЫКЛЮЧЕНЫ, в дерево не приходит reqwest/hyper
# (egress-chokepoint цел). flate2 распаковывает встроенный gz-ассет токенайзера один раз.
tokenizers = { workspace = true }
flate2 = { workspace = true }
# Атомарная запись заметок (vault::atomic_write): tmp-в-той-же-папке → fsync → rename. Рантайм-дека
# (не только dev — как и в app Cargo.toml), плюс TempDir в тестах модулей.
tempfile = { workspace = true }

# AGENT-6 (приватность): хардлинк-reject в `actuator::apply::confine_for_overwrite` на Windows —
# зеркало unix `nlink>1`. std не даёт переносимого link-count, поэтому читаем `nNumberOfLinks` через
# `GetFileInformationByHandle`. `windows-sys` 0.61 УЖЕ транзитивно в Cargo.lock (десятки крейтов; без
# build-script, на `windows-link`) → новой версии/тяжёлой деки в дерево не приходит. ТОЛЬКО под Windows.
[target.'cfg(windows)'.dependencies]
# Win32_Security нужен ТОЛЬКО ради типа `SECURITY_ATTRIBUTES` в сигнатуре `CreateFileW` (мы передаём
# NULL — дескриптор безопасности не используем, но тип обязан существовать, иначе линк-макрос
# `CreateFileW` не резолвится). Foundation — `HANDLE`/`CloseHandle`/`INVALID_HANDLE_VALUE`;
# Storage_FileSystem — `CreateFileW`/`GetFileInformationByHandle`/`BY_HANDLE_FILE_INFORMATION`+флаги.
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
] }
