[package]
name = "nexus-desktop"
description = "Nexus — local-first knowledge base (Tauri 2 backend)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Имя библиотеки фиксируем явно: main.rs вызывает nexus_desktop_lib::run().
[lib]
name = "nexus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Переиспользуемое ядро (CORE-1): db/parser/vector/plugin/vault/redact/chunker/net/ai извлечены
# в отдельный крейт для будущего headless agent-service. App ре-экспортит их (lib.rs) — все
# `crate::net::…`/`crate::db::…` и т.п. по приложению резолвятся через ре-экспорт без правки call-site.
nexus-core = { path = "../../../crates/nexus-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Открытие внешних http(s)-URL в СИСТЕМНОМ браузере (NF-6 «Оригинал», web-источники чата,
# ссылки в превью заметок). В Tauri v2 `open` вынесен из shell-плагина в отдельный `opener`.
# Дёргаем host-side из своей команды `open_external` (схема-гард http/https) → capability НЕ нужна.
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
notify-debouncer-full = { workspace = true }
pulldown-cmark = { workspace = true }
blake3 = { workspace = true }
# Картинки в заметках (IMG-1): декод/энкод base64 для записи вложения и data:-URL превью. Уже в
# Cargo.lock транзитивно (0.22) — прямой зависимостью не тянет скачивание.
base64 = "0.22"
# Атомарная запись заметок (SAFE-1): tmp-в-той-же-папке → fsync → rename поверх цели. Был только в
# dev-deps (TempDir тестов) — теперь нужен и рантайму (`vault::atomic_write`).
tempfile = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
usearch = { workspace = true }
getrandom = { workspace = true }
quick-xml = { workspace = true }
# git-sync (Ф3): локальные + сетевые (pull/push по https). vendored libgit2 + vendored openssl →
# кросс-платформенно без системных зависимостей (как usearch; +время сборки CI). ssh не включаем.
git2 = { version = "0.21", default-features = false, features = [
    "vendored-libgit2",
    "https",
    "vendored-openssl",
] }
# git-credentials в системном keychain (Ф3-3b): macOS Keychain / Windows Cred Manager / Linux Secret
# Service (zbus — pure-Rust, без системного libdbus при сборке). Токен НЕ пишется на диск (AC-SEC-3).
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

[dev-dependencies]
# Тест-хелперы ядра (MockEmbedder, GuardedClient::unchecked, live_test_embedder/LIVE_EMBED_DIM):
# до CORE-1 жили под `#[cfg(test)]` в одном крейте, теперь — за фичей `test-util` ядра, включаемой
# ТОЛЬКО для dev/тестовой сборки app (в прод-бинарь фикстуры не попадают).
nexus-core = { path = "../../../crates/nexus-core", features = ["test-util"] }
# Для интеграционных тестов git-sync (#12): создать локальный bare-remote (init_bare) и клон. Те же
# фичи, что у обычной зависимости — Cargo унифицирует сборку (без второго билда libgit2).
git2 = { version = "0.21", default-features = false, features = [
    "vendored-libgit2",
    "https",
    "vendored-openssl",
] }
